Bug 163852 - FILEOPEN PPTX: image shows compressed vertically
Summary: FILEOPEN PPTX: image shows compressed vertically
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, regression
: 160571 (view as bug list)
Depends on:
Blocks: PPTX-Images
  Show dependency treegraph
 
Reported: 2024-11-11 20:49 UTC by Gerald Pfeifer
Modified: 2025-06-20 21:27 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (525.54 KB, application/vnd.ms-powerpoint)
2024-11-11 20:49 UTC, Gerald Pfeifer
Details
Visual comparison: original (left) - Impress (right) (31.92 KB, image/png)
2024-11-11 20:50 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2024-11-11 20:49:14 UTC
Created attachment 197554 [details]
Sample slide (PPTX)

Opening the sample fine in Impress versus Office 365 the image appears
vertically compressed.

The green shape should fill the orange bounding box, alas is vertically
scaled by a factor of two.

  Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: af0946b9eabe49636d5a732aa38bde954a803538
  CPU threads: 12; OS: Linux 6.11; UI render: default; VCL: gtk3

  Version: 24.8.4.0.0+ (X86_64) / LibreOffice Community
  Build ID: ca378d0046f67edf6fd7c5a17190e8b930f90efe
  CPU threads: 12; OS: Linux 6.11; UI render: default; VCL: gtk3

  Version: 24.2.8.0.0+ (X86_64) / LibreOffice Community
  Build ID: 0e74b05b607d931d63762b7d8f69f59b457c1e17
  CPU threads: 12; OS: Linux 6.11; UI render: default; VCL: gtk3

It does *NOT* reproduce with

  Version: 7.6.7.0.0+ (X86_64) / LibreOffice Community
  Build ID: 88f6a250076eb2a825084c84193b84f3b94ce112
  CPU threads: 12; OS: Linux 6.11; UI render: default; VCL: gtk3

  Version: 7.0.7.0.0+
  Build ID: 54e9dd41dc9dd45af12c9346199f601ea4a5994d
  CPU threads: 12; OS: Linux 6.11; UI render: default; VCL: gtk3

so is a regressions.
Comment 1 Gerald Pfeifer 2024-11-11 20:50:23 UTC
Created attachment 197555 [details]
Visual comparison: original (left) - Impress (right)
Comment 2 raal 2024-11-11 22:52:02 UTC
Confirm with Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 182140d53ac767f5f31aefb2f00ac1f812245703
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2024-11-11 22:59:08 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.2.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 18a81415c56f2c4c6dde248db2fb2bc382b247d8 is the first bad commit
commit 18a81415c56f2c4c6dde248db2fb2bc382b247d8
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Wed Dec 6 08:34:01 2023 +0100

    source 1db193c6c744289139b1df2af0b8defcf974b238

157238: tdf#126084 import svg image from ooxml document that use svgBlip elem. | https://gerrit.libreoffice.org/c/core/+/157238
Comment 4 Regina Henschel 2024-11-11 23:27:00 UTC
In LO 7.6.7 the image has scale 44% for both width and height and bottom crop of 6.01cm. The image is imported as PNG bitmap.
In LO 24.8.1 the image has scale 44% width and 25% height and no crop. The image is imported as SVG graphic.

Seems to be similar to the problem seen in Writer, bug 160571.
Comment 5 Commit Notification 2025-01-06 08:45:06 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/63753117640dde3e8e0b0e677afe26b7f57c626b

tdf#163852 ooxml: fix import of cropped vector graphic objects

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Balázs Varga 2025-01-06 08:59:12 UTC
*** Bug 160571 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2025-01-07 08:54:45 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f0f813ab5e7dc48924e9d42889912c3fb79208eb

tdf#163852 ooxml: fix import of cropped vector graphic objects

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gerald Pfeifer 2025-01-07 13:23:03 UTC
I was going to mark this as RESOLVED VERIFIED with last night's
snapshot

  Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: c034a21f359db6bd8ba7b4938d4501bbcc87e21d
  CPU threads: 12; OS: Linux 6.11; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

alas then noticed that presentation mode exhibits a different issue
now; see https://bugs.documentfoundation.org/show_bug.cgi?id=164622 .
Comment 9 Gerald Pfeifer 2025-01-21 14:02:21 UTC
Verified together with the fix for bug#164622 with last night's snapshot:

  Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: f1bdc5b77406fadb97c9a54f0a06d5cafbdf0371
  CPU threads: 12; OS: Linux 6.12; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US