tdf#163852 ooxml: fix import of cropped vector graphic objects

We need to store the vector graphic objects size, so later
we can calculate with that for the cropping.

follow-up commit of: 1db193c6c744289139b1df2af0b8defcf974b238
(tdf#126084 import svg image from ooxml document that use svgBlip elem)

Change-Id: Iffa98cc6a03063544bdf2b8ec3012415868e7c65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179626
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit 63753117640dde3e8e0b0e677afe26b7f57c626b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179838
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit f0f813ab5e7dc48924e9d42889912c3fb79208eb)
Reviewed-on: https://gerrit.collaboraoffice.com/c/core/+/3703
Reviewed-by: Thorsten Behrens <thorsten.behrens@collabora.com>
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>